[project]
name = "reflection-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "tada20001",email = "tada20001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "grandalf (>=0.8,<0.9)",
    "streamlit (>=1.49.0,<2.0.0)",
    "langchain-google-genai (>=2.1.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
